<resources>
    <string name="app_name" translatable="false">EDUCAT App</string>
    <string name="api_url" translatable="false">https://educat.clouddb.myriade.be/api/</string>
    <string name="available_questionnaires">Available questionnaires</string>
    <string name="fill_in_questionnaire">Fill in a questionnaire</string>
    <string name="view_submitted_questionnaires">View submitted questionnaires</string>
    <string name="submitted_questionnaires">Submitted questionnaires</string>
    <string name="submitted_questionnaire">Submitted questionnaire</string>
    <string name="edit_setup">Edit the setup</string>
    <string name="connected_users">Connected users</string>
    <string name="measurement_menu">Measurement menu</string>
    <string name="measurement_list">Measurement list</string>
    <string name="new_measurement">New Measurement</string>
    <string name="usb_communication">USB Communication</string>
    <string name="obstacle_alerting_system" translatable="false">Obstacle Alerting System</string>
    <string name="graphs">Graphs</string>
    <string name="configure_graphs">Configure graphs</string>
    <string name="configure_variable">Configure variable</string>
    <string name="values">Values</string>
    <string name="tcp_communication">TCP Communication</string>
    <string name="usb_and_tcp_communication">USB and TCP Communication</string>
    <string name="developer_console">Developer console</string>
    <string name="alarm_distance_simulation">Alarm Distance Simulation</string>
    <string name="control_panel">Control Panel</string>
    <string name="setup_menu">Setup menu</string>
    <string name="view_setup_list">View the setup list</string>
    <string name="setup_list">Setup list</string>
    <string name="setups">Setups</string>
    <string name="setup">Setup</string>
    <string name="setup_info">Setup Information</string>
    <string name="view_instrument_list">View the instrument list</string>
    <string name="instrument_list">Instrument list</string>
    <string name="instrumentArrayList">Instruments</string>
    <string name="instruments_colon">Instruments:</string>
    <string name="instrument">Instrument</string>
    <string name="new_setup">New setup</string>
    <string name="cant_add_instrument_without_setup_id">Can\'t add an instrument to a new setup without ID</string>
    <string name="choose_instrument_type">Choose an instrument type</string>
    <string name="set_parameters">Set parameters</string>
    <string name="id_colon">"ID: "</string>
    <string name="setup_id_colon">"Setup ID: "</string>
    <string name="address_colon">"Address: "</string>
    <string name="name_colon">"Name: "</string>
    <string name="parameters_colon">"Parameters: "</string>
    <string name="no_parameters">No parameters for this type of instrument</string>
    <string name="type">Type</string>
    <string name="parameter">Parameter</string>
    <string name="back">Back</string>
    <string name="add_instrument">Add instrument</string>
    <string name="description_colon">"Description: "</string>
    <string name="locked_colon">"Locked: "</string>
    <string name="level_colon" translatable="false">"Level: "</string>
    <string name="data_type_colon" translatable="false">"Data type: "</string>
    <string name="main_board_colon" translatable="false">"Main board: "</string>
    <string name="minimum_colon">"Minimum: "</string>
    <string name="maximum_colon">"Maximum: "</string>
    <string name="default_value_colon">"Default: "</string>
    <string name="value_colon">"Value: "</string>
    <string name="value_description_colon">"Value description: "</string>
    <string name="hardware_identifier_colon">"Hardware ID: "</string>
    <string name="company_id_colon">"Company ID: "</string>
    <string name="hardware_identifier">Hardware ID</string>
    <string name="company_id">Company ID</string>
    <string name="version">Version</string>
    <string name="type_id_colon">"Type ID: "</string>
    <string name="type_name_colon">"Type name: "</string>
    <string name="category_colon">"Category: "</string>
    <string name="input_bytes_colon">"Input bytes: "</string>
    <string name="output_bytes_colon">"Output bytes: "</string>
    <string name="version_colon">"Version: "</string>
    <string name="create_new_setup">Create new setup</string>
    <string name="parameter_not_supported">This parameter is not yet supported in the app!</string>
    <string name="none">None</string>
    <string name="please_provide_details">Please provide the following details</string>
    <string name="setup_in_memory_has_id_and_version">The setup in the memory of the Android device has ID %d and version %d.</string>
    <string name="no_setup_in_memory">There is no setup in the memory of the Android device</string>
    <string name="setup_in_main_board_has_id_and_version">The setup in the main board has ID %d and version %d.</string>
    <string name="no_setup_in_main_board">There is no setup in the main board.</string>
    <string name="no_instruments_available">No instruments available</string>
    <string name="no_setups_available">No setups available</string>
    <string name="distance_colon">Distance: %d cm</string>
    <string name="speed_colon">Speed: %d km/h</string>
    <string name="slope_start_colon">Slope start: %d cm</string>
    <string name="slope_percentage_colon">Slope percentage: %d %%</string>
    <string name="slope_end_colon">Slope end: %d cm</string>
    <string name="alarm_distance_colon">Alarm distance: %d cm</string>
    <string name="show_setup_info">Show the setup info</string>
    <string name="edit_setup_name">Edit the setup name</string>
    <string name="graphs_error">There is a problem with the setup in the memory of the device, please reboot the PWC and restart the app. If the problem persists, check the setup and resend it to the DMU when necessary.</string>
    <string name="list_questionnaire_id_colon">Quest. ID: %1$d</string>
    <string name="list_group_id_colon">Group ID: %1$d</string>
    <string name="list_version_colon">Version: %1$d</string>
    <string name="list_count_colon">Count: %1$d</string>
    <string name="list_user_colon">User: %1$s</string>
    <string name="list_date_colon">Date: %1$s</string>
    <string name="list_child_details_colon">Quest. ID: %1$d Version: %2$d</string>
    <string name="list_submission_details_colon">Quest. ID: %1$d\nVersion: %2$d\n%3$s</string>
    <string name="list_submission_date_colon">"Submission date: "</string>
    <string name="list_last_edit_colon">"Last edit: "</string>
    <string name="filter">Filter</string>
    <string name="start_date_colon">"Start date: "</string>
    <string name="end_date_colon">"End date: "</string>
    <string name="country_colon">"Country: "</string>
    <string name="user_id_colon">"User ID: "</string>
    <string name="clear_filter">Clear filter</string>
    <string name="set_filter">Apply filter</string>
    <string name="dates_in_right_order">Please make sure the start date is before the end date.</string>
    <string name="bullet" translatable="false">&#8226;</string>
    <string name="loading_ellipsis">Loading&#8230;</string>
    <string name="ellipsis" translatable="false">&#8230;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create">Create</string>
    <string name="question">Question</string>
    <string name="upload_remaining_questionnaires">Upload %1$d remaining questionnaire(s)</string>
    <string name="educat_logo" translatable="false">EDUCAT Logo</string>
    <string name="no_submissions">No submitted questionnaires available</string>
    <string name="select_update_frequency">Select update frequency</string>
    <string name="menu_save_setup">Save setup</string>
    <string name="close">Close</string>
    <string name="tooltip">Tooltip</string>
    <string name="save_changes">Save changes</string>
    <string name="quit">Quit</string>
    <string name="saving_failed">Saving failed</string>
    <string name="saved_edit">Saved edit</string>
    <string name="edit">Edit</string>
    <string name="copy_">Copy</string>
    <string name="select_ellipsis">Select&#8230;</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="no_graphs_configured">No graphs configured</string>
    <string name="no_connected_users">No connected users</string>
    <string name="started_at_colon">"Started at: "</string>
    <string name="finished_at_colon">"Finished at: "</string>
    <string name="view_original_submission">View the original submission</string>
    <string name="not_the_latest_version">This is not the latest version of this submission!</string>
    <string name="_for_">" for "</string>
    <string name="graph_1">Graph 1</string>
    <string name="graph_2">Graph 2</string>
    <string name="graph_3">Graph 3</string>
    <string name="graph_4">Graph 4</string>
    <string name="add_variable">Add Variable</string>
    <string name="instrument_colon">Instrument: </string>
    <string name="variable_colon">Variable: </string>
    <string name="color_colon">Color: </string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="daily_diary" translatable="false">Daily Diary</string>
    <string name="instruments_to_be_placed">Instruments to be placed</string>
    <string name="no_measurements">No measurements</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="please_select_a_time">Please select a time</string>
    <string name="please_select_a_start_date">Please select a start date</string>
    <string name="please_select_a_start_time">Please select a start time</string>
    <string name="please_select_an_end_date">Please select an end date</string>
    <string name="please_select_an_end_time">Please select an end time</string>
    <string name="start_time_after_end_time">Please the make sure the start time takes place before the end time</string>
    <string name="start_time_same_as_end_time">Make sure the start time is different from the end time</string>
    <string name="please_provide_a_name">Please provide a name</string>
    <string name="please_provide_a_description">Please provide a description</string>
    <string name="create_a_new_measurement_colon">"Create a new measurement: "</string>
    <string name="select_a_user_colon">"Select a user: "</string>
    <string name="select_a_setup_colon">"Select a setup: "</string>
    <string name="give_a_description_for_the_measurement_colon">"Give a description for the measurement: "</string>
    <string name="description">Description</string>
    <string name="start_time_colon">"Start time: "</string>
    <string name="end_time_colon">"End time: "</string>
    <string name="create_a_new_measuremet_before_starting_it">Create a new measurement before starting it.</string>
    <string name="measurement_stopped">Measurement stopped</string>
    <string name="do_you_want_to_keep_the_measurement">Do you want to keep the measurement?</string>
    <string name="plan_new_measurement">Plan new measurement</string>
    <string name="start_new_measurement">Start new measurement</string>
    <string name="stop_current_measurement">Stop current measurement</string>
    <string name="measurement">Measurement</string>
    <string name="edit_measurement_name">Edit the measurement name</string>
    <string name="about_website_key">Website</string>
    <string name="about_version_key">Version</string>
    <string name="about_locale_key" translatable="false">Locale</string>
    <string name="about_changelog_key">Changelog</string>
</resources>