<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity"
    android:fillViewport="true"
    android:fadeScrollbars="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/about_app_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_logo"
            android:src="@drawable/educat_logo"
            android:contentDescription="@string/educat_logo"/>

        <TextView
            android:id="@+id/about_educat_link_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_website_key"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_educat_link_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            android:text="URL link"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/about_version_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version_key"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_version_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="1.2"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/about_locale_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_locale_key"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_locale_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="en-uk"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/changelog_key_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_changelog_key"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/changelog_value_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Version 1.2..."
            android:textSize="@dimen/font_size_small" />

    </LinearLayout>

</ScrollView>
